07.01.2025 GFG Problem Pair with given sum in a sorted array